<resources>
    <string name="app_name">Bilal</string>
    <string name="today">Today</string>
    <string name="quran">Quran</string>
    <string name="hadith">Hadith</string>
    <string name="qibla_compass">Qibla</string>
    <string name="settings">Settings</string>
    <string name="go_back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="undo">Undo</string>
    <string name="allow">Allow</string>
    <string name="dismiss">Dismiss</string>
    <string name="open_settings">Open settings</string>
    <string name="clear_search">Clear search</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied</string>
    <string name="share">Share</string>
    <string name="decrease">Decrease</string>
    <string name="increase">Increase</string>
    <string name="no_results">No results</string>
    <string name="default_location">Muscat, Oman (default)</string>
    <string name="refresh_location">Refresh location</string>
    <string name="location_unavailable">Couldn\'t get your location. Turn on location or try again outdoors.</string>
    <string name="location_permission_needed">Allow location access to use your current location.</string>
    <string name="degrees">%1$s°</string>
    <string name="kilometers">%1$s km</string>
    <plurals name="minutes">
        <item quantity="one">%1$s minute</item>
        <item quantity="other">%1$s minutes</item>
    </plurals>
    <string name="channel_khatma">Khatma</string>
    <string name="channel_khatma_desc">A quiet nudge on days your reading plan is behind</string>
    <string name="done">Done</string>
    <string name="khatma">Khatma</string>
    <string name="khatma_start">Start a khatma</string>
    <string name="khatma_start_desc">Read the whole mushaf by a date you choose</string>
    <string name="khatma_length">Finish in</string>
    <string name="khatma_from">Start from</string>
    <string name="khatma_from_beginning">The beginning</string>
    <string name="khatma_from_here">Page %1$s</string>
    <string name="khatma_begin">Begin</string>
    <string name="khatma_end">End</string>
    <string name="khatma_complete">Finished. May it be accepted.</string>
    <string name="khatma_on_track">Today\'s reading is done · %1$s a day</string>
    <string name="khatma_progress">%1$s of %2$s pages · %3$s days left</string>
    <plurals name="khatma_pages_due">
        <item quantity="one">%1$s page to read today</item>
        <item quantity="other">%1$s pages to read today</item>
    </plurals>
    <plurals name="pages">
        <item quantity="one">%1$s page</item>
        <item quantity="other">%1$s pages</item>
    </plurals>
    <plurals name="days">
        <item quantity="one">%1$s day</item>
        <item quantity="other">%1$s days</item>
    </plurals>
    <string name="fajr">Fajr</string>
    <string name="sunrise">Sunrise</string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha</string>
    <string name="hijri_date">%1$s AH</string>
    <string name="next_prayer_label">Next prayer</string>
    <string name="adhan_at">Adhan %1$s</string>
    <string name="iqama_at">Iqama %1$s</string>
    <string name="cd_countdown">%1$s in %2$s</string>
    <string name="mute_prayer">Mute %1$s notifications</string>
    <string name="mark_prayed">Mark %1$s as prayed</string>
    <string name="unmark_prayed">Unmark %1$s</string>
    <string name="unmute_prayer">Turn on %1$s notifications</string>
    <string name="permission_location_title">Use your location</string>
    <string name="permission_location_body">Prayer times and the Qibla are calculated for where you are. Your location stays on this device.</string>
    <string name="permission_notifications_title">Turn on prayer notifications</string>
    <string name="permission_notifications_body">Get notified when each adhan and iqama time begins.</string>
    <string name="permission_exact_title">Allow on-time alarms</string>
    <string name="permission_exact_body">Without this permission, Android may deliver prayer notifications a few minutes late.</string>
    <string name="update_available_short">A new version is available</string>
    <string name="update_action">Update</string>
    <string name="daily_inspiration">Daily inspiration</string>
    <string name="verse_of_the_day">Verse of the day</string>
    <string name="qibla_summary">%1$s° from north · %2$s km to Makkah</string>
    <string name="tasbih_counter">Tasbih</string>
    <string name="reset_tasbih">Reset counter</string>
    <string name="tasbih_reset_done">Counter reset</string>
    <string name="tasbih_of_target">of %1$s</string>
    <string name="cd_tasbih_button">Count dhikr</string>
    <string name="tasbih_plus_one" translatable="false">+1</string>
    <string name="tasbih_dhikr_subhanallah">Subhan Allah</string>
    <string name="tasbih_dhikr_alhamdulillah">Alhamdulillah</string>
    <string name="tasbih_dhikr_allahuakbar">Allahu Akbar</string>
    <string name="tasbih_dhikr_lailahaillallah">La ilaha illa Allah</string>
    <string name="search_quran_hint">Ayat al-Kursi, 2:255, juz 30, patience…</string>
    <string name="surahs">Surahs</string>
    <string name="ayahs">Ayahs</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="continue_reading">Continue reading</string>
    <string name="page_of_surah">Page %1$s · %2$s</string>
    <string name="surah_title">Surah %1$s</string>
    <string name="meccan">Meccan</string>
    <string name="medinan">Medinan</string>
    <plurals name="verse_count">
        <item quantity="one">%1$s ayah</item>
        <item quantity="other">%1$s ayahs</item>
    </plurals>
    <string name="no_bookmarks">No bookmarks yet</string>
    <string name="no_bookmarks_body">Tap an ayah while reading and choose Bookmark.</string>
    <string name="bookmark">Bookmark</string>
    <string name="remove_bookmark">Remove bookmark</string>
    <string name="jump_to">Jump to</string>
    <string name="passage_ayat_al_kursi">Ayat al-Kursi</string>
    <string name="passage_khawatim_al_baqarah">The last two ayahs of Al-Baqarah</string>
    <string name="passage_ayat_an_nur">The Verse of Light</string>
    <string name="passage_ayat_ad_dayn">The Verse of Debt</string>
    <string name="passage_mu_awwidhatayn">Al-Mu\'awwidhatayn</string>
    <string name="passage_three_quls">The three Quls</string>
    <string name="ayah_range">%1$s:%2$s-%3$s</string>
    <string name="juz_tab">Juz</string>
    <string name="page_tab">Page</string>
    <string name="juz_number">Juz %1$s</string>
    <string name="page_juz_hizb">Page %1$s · Juz %2$s · Hizb %3$s/%4$s</string>
    <string name="sajdah_note">۩ A prostration of recitation at %1$s. The schools differ on whether it is obligatory or recommended.</string>
    <string name="page_juz">Page %1$s · Juz %2$s</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_ayah">This ayah</string>
    <string name="repeat_range">From where I started</string>
    <string name="repeat_surah">The whole surah</string>
    <string name="retry">Retry</string>
    <string name="playback_error_offline">No connection. Ayahs already downloaded still play.</string>
    <string name="playback_error_missing">This reciter doesn\'t have that ayah. Try another reciter.</string>
    <string name="playback_error_failed">The recitation server didn\'t answer. Try again in a moment.</string>
    <string name="player_position">%1$s of %2$s</string>
    <string name="play_pause">Play or pause</string>
    <string name="previous_ayah">Previous ayah</string>
    <string name="next_ayah">Next ayah</string>
    <string name="stop_playback">Stop recitation</string>
    <string name="reciter">Reciter</string>
    <string name="reciter_mishary">Mishary Alafasy</string>
    <string name="reciter_husary">Mahmoud Khalil Al-Husary</string>
    <string name="reciter_abdul_basit">Abdul Basit Abdul Samad</string>
    <string name="reciter_minshawi">Mohamed Siddiq El-Minshawi</string>
    <string name="reciter_sudais">Abdul Rahman Al-Sudais</string>
    <string name="reciter_shuraim">Saud Al-Shuraim</string>
    <string name="reciter_ghamdi">Saad Al-Ghamdi</string>
    <string name="reciter_hudhaify">Ali Al-Hudhaify</string>
    <string name="reciter_muaiqly">Maher Al-Muaiqly</string>
    <string name="reciter_shatri">Abu Bakr Al-Shatri</string>
    <string name="reciter_ayyub">Muhammad Ayyub</string>
    <string name="reciter_basfar">Abdullah Basfar</string>
    <string name="reciter_dosari">Yasser Al-Dosari</string>
    <string name="reciter_qatami">Nasser Al-Qatami</string>
    <string name="reciter_juhany">Abdullah Awad Al-Juhany</string>
    <string name="reciter_ali_jaber">Ali Jaber</string>
    <string name="reciter_fares_abbad">Fares Abbad</string>
    <string name="reciter_jibreel">Muhammad Jibreel</string>
    <string name="reciter_hani_rifai">Hani Ar-Rifai</string>
    <string name="reciter_tablawi">Mohamed Al-Tablawi</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="timer_off">Off</string>
    <string name="search_hadith_hint">Search hadith</string>
    <string name="collections_tab">Collections</string>
    <string name="favorites_tab">Favorites</string>
    <plurals name="hadith_count">
        <item quantity="one">%1$s hadith</item>
        <item quantity="other">%1$s hadiths</item>
    </plurals>
    <string name="sample_hadiths">Sample of %1$s hadiths</string>
    <string name="download_collection">Download full collection</string>
    <string name="not_downloaded">Not downloaded</string>
    <string name="cancel_download">Cancel download</string>
    <string name="download_failed">Couldn\'t download %1$s. Check your connection.</string>
    <string name="downloads_note">Full collections are downloaded only when you ask, from jsDelivr (a few MB each).</string>
    <string name="sample_banner">You\'re reading a sample of this collection. Download it to read and search every hadith.</string>
    <string name="search_incomplete">Collections you haven\'t downloaded are only partly searched.</string>
    <string name="favorites_empty">No favorites yet</string>
    <string name="favorites_empty_body">Tap the heart on a hadith to keep it here.</string>
    <string name="hadith_number">Hadith %1$s</string>
    <string name="narrated_by">Narrated by %1$s</string>
    <string name="add_favorite">Add to favorites</string>
    <string name="remove_favorite">Remove from favorites</string>
    <string name="grade_sahih">Sahih</string>
    <string name="grade_hasan">Hasan</string>
    <string name="grade_hasan_sahih">Hasan Sahih</string>
    <string name="grade_daif">Da\'if</string>
    <string name="grade_mawdu">Mawdu\'</string>
    <string name="qibla_facing">You\'re facing the Qibla</string>
    <string name="qibla_turn_right">Turn right %1$s°</string>
    <string name="qibla_turn_left">Turn left %1$s°</string>
    <string name="qibla_bearing_info">The Qibla is %1$s° clockwise from north</string>
    <string name="qibla_bearing_label">Qibla direction</string>
    <string name="qibla_distance_label">Distance to Makkah</string>
    <string name="compass_unavailable_title">No compass on this device</string>
    <string name="shortcut_athkar_short">Athkar</string>
    <string name="shortcut_athkar_long">Morning athkar</string>
    <string name="shortcut_read_short">Read</string>
    <string name="shortcut_read_long">Continue reading</string>
    <string name="shortcut_qibla_short">Qibla</string>
    <string name="shortcut_qibla_long">Find the Qibla</string>
    <string name="shortcut_tasbih_short">Tasbih</string>
    <string name="shortcut_tasbih_long">Open the tasbih</string>
    <string name="preview_tasbih_count">33</string>
</resources>